--- a/users-and-permissions/session-context/api-reference/api.yaml
+++ b/users-and-permissions/session-context/api-reference/api.yaml
@@ -378,8 +378,7 @@ components:
       title: Context
       type: object
       example:
-        Custom session attributes:
-          '': string
+        CustomSessionAttributes:
           property1: {}
           property2: {}
       properties:
