COP-4391 - fix header

--- a/orders/order/api-reference/api.yml
+++ b/orders/order/api-reference/api.yml
@@ -106,7 +106,7 @@ paths:
         '200':
           description: The request was successful. Number of orders returned in header.
           headers:
-            hybris-count:
+            X-Total-Count:
               schema:
                 type: number
               description: |
