--- a/products-labels-and-brands/product-service/api-reference/api.yml
+++ b/products-labels-and-brands/product-service/api-reference/api.yml
@@ -1418,6 +1418,15 @@ components:
                   productVariantAttributes:
                     color: RED
                     size: XS
+            BASIC product - simple:
+              value:
+                name: Smartphone X2
+                code: BASIC001
+                description: The world best camera and camcorder in a waterproof smartphone.
+                published: false
+                taxClasses:
+                  EN: STANDARD
+                productType: BASIC
     productUpdateBody:
       content:
         application/json:
